DB-related files added; logic removed from jsp to the CountryServlet

--- a/Homework12_GeoWeb/src/main/webapp/index.html
+++ b/Homework12_GeoWeb/src/main/webapp/index.html
@@ -10,7 +10,7 @@ and open the template in the editor.
     </head>
     <body>
         <div>
-            <form action="country.jsp"> 
+            <form action="countryServlet">
                 <input type="submit" value="country">
             </form>
             <form action="region.jsp"> 
